# globant-test

./: .dockerignore  .env  .gitignore  Dockerfile  README.md  compose.yaml  hello.py  pyproject.toml
app/: config.py  main.py
app/database/: postgres.py
app/dependencies/: connection.py
app/models/: __init__.py  base.py  responses.py
app/routes/: reports.py  upload.py
app/services/: csv_service.py  db_service.py
app/utils/: parsers.py
migrations/: env.py
migrations/versions/: 2a3cdba81a48_initial_tables.py
tests/: conftest.py  test_data.py
tests/routes/: test_reports.py  test_upload.py
tests/services/: test_csv_service.py  test_db_service.py
