[project]
name = "globant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.30.0",
    "fastapi>=0.115.4",
    "pydantic-settings>=2.6.1",
    "sqlmodel>=0.0.22",
]

[tool.uv]
dev-dependencies = [
    "alembic>=1.14.0",
    "ruff>=0.7.2",
]
