[project]
name = "globant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.30.0",
    "fastapi>=0.115.4",
    "pydantic>=2.9.2",
    "pydantic-settings>=2.6.1",
    "sqlmodel>=0.0.22",
]

[tool.uv]
dev-dependencies = [
    "alembic>=1.14.0",
    "ruff>=0.7.2",
]


[tool.ruff]
line-length = 79
extend-exclude = ['migrations']
exclude = [".venv"]

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']

[tool.ruff.format]
preview = true
quote-style = 'single'
